# Iacdash-

./: ARCHITECTURE.md  CLOUD-SETUP.md  GATEWAY-API.md  GITOPS.md  GLOSSARY.md  MONITORING.md  MONITORING_original.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SERVICE-MESH.md  STANDARDS.md  STORAGE.md  TRANSFORMATIONS.md  gateway_api_guide.md  troubleshooting_guide.md
.github/workflows/: kubernetes-validate.yml  terraform-validate.yml
docs/tutorials/: GETTING_STARTED.md
gateway-api/: gateway.yaml  gatewayclass.yaml
gateway-api/routes/: basic-route.yaml
monitoring/alerts/: slo-alerts.yaml
monitoring/dashboards/: logs-traces-dashboard.json  sli-slo-dashboard.json
monitoring/servicemonitors/: gateway-api-metrics.yaml  gateway-monitor.yaml  sli-metrics.yaml
monitoring/traces/: jaeger-deployment.yaml
scripts/: customize-platform.sh  transform.sh
scripts/backup/: backup-cluster.sh
scripts/debug/: debug-cluster.sh
security/certificates/: cert-manager.yaml
security/network-policies/: default-deny-all.yaml
security/policies/: pod-security-standards.yaml
security/secrets/: external-secrets-operator.yaml
service-mesh/istio/: mtls-strict.yaml
testing/load-testing/: gateway-stress-test.yaml
testing/performance/: k6-load-test.js
transformations/envoy-filters/: request-transformation.yaml  wasm-filters.yaml
transformations/wasm/body-transform/: Cargo.toml
transformations/wasm/body-transform/src/: lib.rs
transformations/wasm/header-transform/: Cargo.toml
transformations/wasm/header-transform/src/: lib.rs
(+50 files in other folders)
